tests/single_instruction_translation_validation/mcsema/register-variants-samereg/vcvtps2dq_ymm_ymm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:185:26: error: use of undefined value '@my.fabs.v4f32'
  %10 = call <4 x float> @my.fabs.v4f32(<4 x float> %9)
                         ^
0.02user 0.03system 0:00.06elapsed 81%CPU (0avgtext+0avgdata 27500maxresident)k
0inputs+16outputs (0major+3278minor)pagefaults 0swaps
